# AliceVision

src/: CMakeLists.txt
src/aliceVision/dataio/: CMakeLists.txt
src/aliceVision/depthMap/: CMakeLists.txt
src/aliceVision/depthMap/cuda/: PlaneSweepingCuda.cpp  PlaneSweepingCuda.hpp
src/aliceVision/depthMap/cuda/deviceCommon/: device_color.cu  device_color.h  device_eig33.cu  device_eig33.cuh  device_global.cu  device_global.h  device_matrix.cu  device_matrix.cuh  device_matrix.h  device_patch_es.cu  device_patch_es.cuh  device_patch_es.h  device_patch_es_glob.cu  device_patch_es_glob.h  device_simStat.cu
src/aliceVision/depthMap/cuda/planeSweeping/: cuda_global_data.cu  cuda_global_data.cuh  device_code.cu  device_code.cuh  device_code.h  device_code_fuse.cu  device_code_fuse.h  device_code_refine.cu  device_code_refine.h  device_code_volume.cu  device_code_volume.cuh  device_code_volume.h  device_utils.h  plane_sweeping_cuda.cu  plane_sweeping_cuda.h  plane_sweeping_cuda.hpp
src/aliceVision/linearProgramming/lInfinityCV/: CMakeLists.txt
src/aliceVision/sfm/: CMakeLists.txt  LocalBundleAdjustmentCeres.cpp  rig_test.cpp  sfmDataIO_json.cpp  sfmDataIO_json.hpp
src/aliceVision/sfm/pipeline/global/: ReconstructionEngine_globalSfM.cpp
src/aliceVision/sfm/pipeline/sequential/: ReconstructionEngine_sequentialSfM.cpp
src/aliceVision/system/: CMakeLists.txt
src/samples/robustEssentialBA/: main_robustEssentialBA.cpp
src/software/convert/: main_convertAnimatedCamera.cpp
src/software/export/: main_exportAnimatedCamera.cpp  main_exportMVE2.cpp  main_exportMVSTexturing.cpp  main_exportMatlab.cpp  main_exportMeshlab.cpp  main_exportPMVS.cpp
src/software/pipeline/: main_incrementalSfM.cpp  main_prepareDenseScene.cpp  main_rigCalibration.cpp
src/software/utils/: main_qualityEvaluation.cpp  main_rigTransform.cpp
